<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:title="@string/fish"
            android:id="@+id/id_fish"
            android:icon="@drawable/ic_fish"/>
        <item android:title="@string/na"
            android:id="@+id/id_na"
            android:icon="@drawable/ic_na"/>
        <item android:title="@string/sna"
            android:id="@+id/id_sna"
            android:icon="@drawable/ic_sna"/>
        <item android:title="@string/history"
            android:id="@+id/id_history"
            android:icon="@drawable/ic_history"/>
    </group>
    <item android:title="О продавце">
        <menu>
            <item android:title="@string/contacts"
                android:id="@+id/id_contacts"
                android:icon="@drawable/ic_contacts"/>
            <item android:title="@string/delivery"
                android:id="@+id/id_delivery"
                android:icon="@drawable/ic_delivery"/>
        </menu>
    </item>

</menu>